# FutureCore

./: .gitignore  .scalafmt.conf  Makefile  build.sc  default.nix  shell.nix
hw/spinal/futurecore/: Config.scala  Controller.scala  EXU.scala  ExecuteUnit.scala  FutureCore.scala  FutureCorePlugin.scala  IDU.scala  IFU.scala  InstDecodeUnit.scala  InstFetchUnit.scala  MAU.scala  MemoryAccessUnit.scala  TopLevel.scala  WBU.scala  WriteBackUnit.scala
hw/spinal/futurecore/blackbox/: CsrDpi.scala  EBreakDpi.scala  MemDpi.scala  RegDpi.scala  RegsDpi.scala
hw/spinal/futurecore/decode/: CtrlService.scala  DecodePlugin.scala  ImmGenerator.scala  IntRegfile.scala
hw/spinal/futurecore/execute/: DataMemory.scala  ExecutePlugin.scala  IntAlu.scala  SrcSelector.scala
hw/spinal/futurecore/fetch/: BranchTargeter.scala  FetchPlugin.scala  InstructionMemory.scala  ProgramCounter.scala
hw/spinal/futurecore/ip/: Adder.scala  Alu.scala  ImmGen.scala  RegFile.scala
hw/spinal/futurecore/ip/blackbox/: EBreakDpi.scala  MemDpi.scala
hw/spinal/futurecore/legacy/: Controller.scala  EXU.scala  FutureCore.scala  IDU.scala  IFU.scala  MAU.scala  WBU.scala
hw/spinal/futurecore/legacy/ip/: Alu.scala  ImmGen.scala  RegFile.scala
hw/spinal/futurecore/lib/: Alu.scala  Debugger.scala  ImmGen.scala  RegFile.scala  RegisterFile.scala
hw/spinal/futurecore/misc/: TypeExtensions.scala
hw/spinal/futurecore/riscv/: Instruction.scala  Rvi.scala
hw/spinal/futurecore/writeback/: CommitSelector.scala  WritebackPlugin.scala
hw/verilog/: csr_dpi.sv  ebreak_dpi.sv  mem_dpi.sv  reg_dpi.sv  regs_dpi.sv
nix/: mill-0.11.12.nix
sim/rust/: Cargo.toml  Makefile
sim/rust/futurecore/: Cargo.toml  build.rs
sim/rust/futurecore/src/: dpic.rs  error.rs  lib.rs  main.rs  mem.rs  verilated.rs
sim/rust/futurecore/src/arch/: mod.rs  rv32i.rs
sim/rust/futurecore/src/core/: mod.rs
sim/rust/futurecore/src/core/sim/: dpic.rs  mod.rs  verilated.rs
sim/rust/futurecore/src/dev/: mod.rs  serial.rs  timer.rs
sim/rust/futurecore/src/device/: mod.rs  serial.rs  timer.rs
sim/rust/futurecore/src/utils/: diff.rs  gdb.rs  mod.rs
sim/rust/futurecore/verilated_cpp/: CMakeLists.txt  vsrc  wrapper.cpp  wrapper.h
sim/rust/sdb/: Cargo.toml
sim/rust/trace/: Cargo.toml
sim/spinal/futurecore/ip/: AluTest.scala
sim/spinal/futurecore/legacy/ip/: AluTest.scala
sim/spinal/futurecore/lib/: AluTest.scala
sim/verilator/: Makefile  vsrc
sim/verilator/csrc/: csr.cpp  main.cpp  memory.cpp  runtime.cpp
sim/verilator/csrc/include/: csr.h  macro.h  memory.h  runtime.h
test/spinal/futurecore/: TopLevel.scala
